--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% block title %}
-  Записи сообщества {{group.title}}
+  Записи сообщества {{ group.title }}
 {% endblock title %}
 {% block content %}
   <div class="container py-5">
-    <h1> Записи сообщества {{group.title}} </h1> 
+    <h1> Записи сообщества {{ group.title }} </h1>
+    <h3> {{ group.description }} </h3>
   </div>
   {% for post in posts %}
     {% include 'includes/publication.html' %} 
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
-{% endblock%}
+{% endblock %}
