--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -9,9 +9,7 @@
   {% for post in posts %}
     {% include 'includes/publication.html' %} 
     {% if post.group %}
-      <button type="button" class="btn btn btn-info">
-        <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-      </button>
+        <a class="btn btn-primary" href="{% url 'posts:group_list' post.group.slug %}" role="button">Все записи группы {{ post.group.title }}</a>
     {% endif %}
     {% if not forloop.last %}<hr>{% endif %}
   {% endfor %}
